retrieve (1)/src/objects/Option__c.object
<CustomObject>
    <fields>
        <fullName>Option__c</fullName>
        <label>Option:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question1__c</fullName>
        <formula>Question__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Questionaire__c</referenceTo>
        <relationshipLabel>Options</relationshipLabel>
        <relationshipName>Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Option</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Option-{000}</displayFormat>
        <label>Option Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>